# mdk

./: .arch-inventory  .gitignore  AUTHORS  ChangeLog  ChangeLog.1  ChangeLog.2  INSTALL  Makefile.am  NEWS  README  THANKS  TODO  autogen.sh  configure.ac  configure.in  mdk.spec  updatelog
autom4te.cache/: .gitignore
doc/: .arch-inventory  .gitignore  COPYING.MIX.DOC  Makefile.am  gendocs.sh  gendocs_template  mdk.texi  mdk_ack.texi  mdk_bugs.texi  mdk_copying.texi  mdk_emacs.texi  mdk_findex.texi  mdk_gmixvm.texi  mdk_gstart.texi  mdk_index.texi  mdk_install.texi  mdk_intro.texi  mdk_mixasm.texi  mdk_mixguile.texi  mdk_mixvm.texi  mdk_tut.texi
doc/img/: Makefile.am  ss_mix.txt
etc/: TODO  make-announcement  upload
intl/: .gitignore
lib/: .arch-inventory  .gitignore  Makefile.am  darwin.c  getopt_long.c
m4/: .arch-inventory  .gitignore
misc/: Makefile.am  mixal-mode.el
mixgtk/: .arch-inventory  .gitignore  Makefile.am  gmixvm.c  mixgtk.c  mixgtk.glade  mixgtk.gladep  mixgtk.h  mixgtk_cmd_dispatcher.c  mixgtk_cmd_dispatcher.h  mixgtk_config.c  mixgtk_config.h  mixgtk_device.c  mixgtk_device.h  mixgtk_external.c  mixgtk_external.h  mixgtk_fontsel.c  mixgtk_fontsel.h  mixgtk_gen_handlers.c  mixgtk_gen_handlers.h  mixgtk_input.c  mixgtk_input.h  mixgtk_mixal.c  mixgtk_mixal.h  mixgtk_mixvm.c  mixgtk_mixvm.h  mixgtk_widgets.c  mixgtk_widgets.h  mixgtk_wm.c  mixgtk_wm.h
mixguile/: .arch-inventory  .gitignore  Makefile.am  mixguile-commands.scm  mixguile-vm-stat.scm  mixguile.c  mixguile.h  mixguile.scm  mixguile_cmd_dispatcher.c  mixguile_cmd_dispatcher.h  mixguile_main.c  xmixguile_cmd_dispatcher.c  xmixguile_cmd_dispatcher.h
mixlib/: .arch-inventory  .gitignore  Makefile.am  completion.c  completion.h  gettext.h  mix.c  mix.h  mix_code_file.c  mix_code_file.h  mix_config.c  mix_config.h  mix_device.c  mix_device.h  mix_eval.c  mix_eval.h  mix_eval_scanner.l  mix_file.c  mix_file.h  mix_ins.c  mix_ins.h  mix_io.c  mix_io.h  mix_parser.c  mix_parser.h  mix_predicate.c  mix_predicate.h  mix_predicate_list.c  mix_predicate_list.h  mix_scanner.l  mix_src_file.c  mix_src_file.h  mix_symbol_table.c  mix_symbol_table.h  mix_types.c  mix_types.h  mix_vm.c  mix_vm.h  mix_vm_clock.c  mix_vm_clock.h  (+16 more)
mixlib/testsuite/: .arch-inventory  Makefile.am  mix_device_t.c  mix_eval_t.c  mix_ins_t.c  mix_parser_t.c  mix_types_t.c  mix_vm_ins_t.c  test.h
mixutils/: .arch-inventory  .gitignore  Makefile.am  mixasm.c  mixasm_comp.c  mixasm_comp.h  mixvm.c  mixvm_command.c  mixvm_command.h  mixvm_loop.c  mixvm_loop.h
po/: .arch-inventory  .gitignore  ChangeLog  POTFILES.in  de.po
samples/: .arch-inventory  .gitignore  Makefile.am  isamixinstruction.mixal  m.mixal  mixasm  mixvm  permutations.cardrd  primes.result
samples/tests/: .arch-inventory  Makefile.am  bt.mixal  cbp.mixal  dup_f.mixal  ldan.mixal  lockonw.mixal  minus_zero.mixal  negwrite.mixal  stress0.mixal  stress1.mixal  stress2.mixal  stress4.mixal  stress5.mixal  stress6.mixal
