## Process this file with automake to produce Makefile.in

# Copyright (C) 2000, 2001, 2004, 2006, 2013, 2019 Free Software Foundation, Inc.
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

SUBDIRS = tests

EXTRA_DIST = primes.result hello.mixal primes.mixal echo.mixal \
             permutations.mixal permutations.cardrd isains.mixal \
             elevator.mixal mystery.mixal
